# Q-player

./: CMakeLists.txt  MainWindow.cc  MainWindow.hh  main.cpp
